@@ -46,6 +46,7 @@ cat >tests/up.1 <<EOF
 ====stdout====
 ====stderr====
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
+
 Configuring interface eth0=eth0 (inet)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /bin/ip addr add 1.2.3.4/255.255.255.0 broadcast 1.2.3.255 	  dev eth0 label eth0
@@ -54,6 +55,7 @@ Configuring interface eth0=eth0 (inet)
 echo hi
 echo hello
 /bin/run-parts --exit-on-error --verbose /etc/network/if-up.d
+
 Configuring interface eth1=eth1 (inet)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /bin/ip addr add 1.2.3.4/255.252.0.0 broadcast 1.3.255.255 	  dev eth1 label eth1
@@ -62,6 +64,7 @@ Configuring interface eth1=eth1 (inet)
 echo hi
 echo hello
 /bin/run-parts --exit-on-error --verbose /etc/network/if-up.d
+
 Configuring interface eth2=eth2 (inet)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /bin/ip addr add 1.2.3.4/255.255.255.128 broadcast 1.2.3.127 	  dev eth2 label eth2
@@ -70,6 +73,7 @@ Configuring interface eth2=eth2 (inet)
 echo hi
 echo hello
 /bin/run-parts --exit-on-error --verbose /etc/network/if-up.d
+
 Configuring interface eth3=eth3 (inet)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /bin/ip addr add 1.2.3.4/255.255.255.0 broadcast 1.2.3.0 	  dev eth3 label eth3
@@ -135,36 +139,42 @@ cat >tests/up.2 <<EOF
 ====stdout====
 ====stderr====
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
+
 Configuring interface eth0=eth0 (inet)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /bin/ip addr add 1.2.3.4/255.255.255.0 broadcast 1.2.3.255 	  dev eth0 label eth0
 /bin/ip link set dev eth0   up
 
 /bin/run-parts --exit-on-error --verbose /etc/network/if-up.d
+
 Configuring interface eth1=eth1 (inet)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /bin/ip addr add 1.3.4.5/255.255.255.0 broadcast 1.3.4.255 	  dev eth1 label eth1
 /bin/ip link set dev eth1   up
 
 /bin/run-parts --exit-on-error --verbose /etc/network/if-up.d
+
 Configuring interface eth2=eth2 (inet)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /bin/ip addr add 1.4.5.6/255.255.255.0 broadcast 1.4.5.255 	  dev eth2 label eth2
 /bin/ip link set dev eth2   up
 
 /bin/run-parts --exit-on-error --verbose /etc/network/if-up.d
+
 Configuring interface eth3=eth3 (inet)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /bin/ip addr add 1.5.6.7/255.255.255.0 broadcast 1.5.6.255 	  dev eth3 label eth3
 /bin/ip link set dev eth3   up
 
 /bin/run-parts --exit-on-error --verbose /etc/network/if-up.d
+
 Configuring interface eth4=eth4 (inet)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /bin/ip addr add 1.7.8.9/255.255.255.0 broadcast 1.7.8.255 	  dev eth4 label eth4
 /bin/ip link set dev eth4   up
 
 /bin/run-parts --exit-on-error --verbose /etc/network/if-up.d
+
 Configuring interface eth5=eth5 (inet)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /bin/ip addr add 1.8.9.10/255.255.255.0 broadcast 1.8.9.255 	  dev eth5 label eth5
@@ -220,6 +230,7 @@ cat >tests/up.3 <<EOF
 Failed to bring up eth0.
 ====stderr====
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
+
 Configuring interface eth0=eth0 (inet)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /bin/ip addr add 1.2.3.4/255.255.255.0 broadcast 1.2.3.255 	  dev eth0 label eth0
@@ -295,6 +306,7 @@ Configuring interface eth0=eth0 (inet6)
 Configuring interface eth0=eth0 (inet6)
 Missing required variable: address
 Missing required configuration variables for interface eth0/inet6.
+
 Configuring interface eth1=eth1 (inet6)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /sbin/modprobe -q net-pf-10 > /dev/null 2>&1 || true # ignore failure.
@@ -333,6 +345,7 @@ EOF
 cat >tests/up.4 <<EOF
 ====stdout====
 ====stderr====
+
 Configuring interface eth0=work (inet)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /bin/ip addr add 1.2.3.4/255.255.255.0 broadcast 1.2.3.255 	  dev eth0 label eth0
@@ -355,6 +368,7 @@ cat >tests/up.5 <<EOF
 ====stdout====
 ====stderr====
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
+
 Configuring interface eth0=eth0 (inet)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /bin/ip addr add 1.2.3.4/255.255.255.0 broadcast 1.2.3.255 	  dev eth0 label eth0
@@ -376,6 +390,7 @@ cat >tests/up.6 <<EOF
 ====stdout====
 ====stderr====
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
+
 Configuring interface eth0=eth0 (inet)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /bin/ip addr add 1.2.3.4/255.255.255.0 broadcast 1.2.3.255 	  dev eth0 label eth0
@@ -413,6 +428,7 @@ cat >tests/up.7 <<EOF
 ====stdout====
 ====stderr====
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
+
 Configuring interface eth0=eth0 (inet)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /bin/ip addr add 1.2.3.4/255.255.255.0 broadcast 1.2.3.255 	  dev eth0 label eth0
@@ -431,6 +447,7 @@ Configuring interface eth0=eth0 (inet6)
 
 /bin/run-parts --exit-on-error --verbose /etc/network/if-up.d
 if test -d /sys/class/net/eth0 -a             ! -d /sys/class/net/eth0.1 ;     then         /bin/ip link set up dev eth0;         /bin/ip link add link eth0 name eth0.1 type vlan id 1;     fi
+
 Configuring interface eth0.1=eth0.1 (inet6)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /sbin/modprobe -q net-pf-10 > /dev/null 2>&1 || true # ignore failure.
@@ -443,12 +460,14 @@ Configuring interface eth0.1=eth0.1 (inet6)
 
 /bin/run-parts --exit-on-error --verbose /etc/network/if-up.d
 if test -d /sys/class/net/eth0 -a             ! -d /sys/class/net/eth0.0201 ;     then         /bin/ip link set up dev eth0;         /bin/ip link add link eth0 name eth0.0201 type vlan id 201;     fi
+
 Configuring interface eth0.0201=eth0.0201 (inet)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /bin/ip addr add 192.168.0.1/255.255.255.128 broadcast 192.168.0.127 	  dev eth0.0201 label eth0.0201
 /bin/ip link set dev eth0.0201   up
 
 /bin/run-parts --exit-on-error --verbose /etc/network/if-up.d
+
 Configuring interface br0.0201=br0.0201 (inet)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 
@@ -456,12 +475,14 @@ Configuring interface br0.0201=br0.0201 (inet)
 /bin/ip link set dev br0.0201 up 2>/dev/null || true
 /bin/run-parts --exit-on-error --verbose /etc/network/if-up.d
 if test -d /sys/class/net/br0 -a             ! -d /sys/class/net/br0.0202 ;     then         /bin/ip link set up dev br0;         /bin/ip link add link br0 name br0.0202 type vlan id 202;     fi
+
 Configuring interface br0.0202=br0.0202 (inet)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 
 
 /bin/ip link set dev br0.0202 up 2>/dev/null || true
 /bin/run-parts --exit-on-error --verbose /etc/network/if-up.d
+
 Configuring interface tunnel=tunnel (inet6)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /sbin/modprobe -q net-pf-10 > /dev/null 2>&1 || true # ignore failure.
@@ -498,6 +519,7 @@ cat >tests/up.8 <<EOF
 ====stdout====
 ====stderr====
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
+
 Configuring interface eth1=eth1 (inet)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /bin/ip addr add 1.2.3.4/255.255.255.0 broadcast 1.2.3.255 	  dev eth1 label eth1
@@ -506,6 +528,7 @@ Configuring interface eth1=eth1 (inet)
 echo hi
 echo hello
 /bin/run-parts --exit-on-error --verbose /etc/network/if-up.d
+
 Configuring interface eth1:1=eth1:1 (inet)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /bin/ip addr add 1.5.3.4/255.255.255.0 broadcast 1.5.3.255 	  dev eth1:1 label eth1:1
@@ -515,6 +538,7 @@ echo hihi
 echo hellolo
 /bin/run-parts --exit-on-error --verbose /etc/network/if-up.d
 if test -d /sys/class/net/eth2 -a             ! -d /sys/class/net/eth2.2 ;     then         /bin/ip link set up dev eth2;         /bin/ip link add link eth2 name eth2.2 type vlan id 2;     fi
+
 Configuring interface eth2.2=eth2.2 (inet)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /bin/ip addr add 2.3.4.5/255.255.255.0 broadcast 2.3.4.255 	  dev eth2.2 label eth2.2
@@ -522,6 +546,7 @@ Configuring interface eth2.2=eth2.2 (inet)
 
 /bin/run-parts --exit-on-error --verbose /etc/network/if-up.d
 if test -d /sys/class/net/eth2 -a             ! -d /sys/class/net/eth2.2 ;     then         /bin/ip link set up dev eth2;         /bin/ip link add link eth2 name eth2.2 type vlan id 2;     fi
+
 Configuring interface eth2.2:3=eth2.2:3 (inet)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /bin/ip addr add 3.4.5.6/255.255.254.0 broadcast 3.4.5.255 	  dev eth2.2:3 label eth2.2:3
@@ -539,6 +564,7 @@ EOF
 cat >tests/up.9 <<EOF
 ====stdout====
 ====stderr====
+
 Configuring interface tunnel=tunnel (inet6)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /sbin/modprobe -q net-pf-10 > /dev/null 2>&1 || true # ignore failure.
@@ -577,11 +603,13 @@ cat >tests/up.11 <<EOF
 ====stdout====
 ====stderr====
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
+
 Configuring interface lo=lo (inet)
 configure lo
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /bin/ip link set dev lo up
 /bin/run-parts --exit-on-error --verbose /etc/network/if-up.d
+
 Configuring interface eth0=eth0 (inet)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /bin/ip addr add 1.2.3.4/255.255.255.0 broadcast 1.2.3.255 	  dev eth0 label eth0
@@ -611,6 +639,7 @@ cat >tests/up.13 <<EOF
 warning: couldn't open interfaces file "tests/testcase.13"
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /bin/ip link set up dev lo 2>/dev/null
+
 Configuring interface lo=lo (inet)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /bin/run-parts --exit-on-error --verbose /etc/network/if-up.d
@@ -690,15 +719,18 @@ cat >tests/up.16 <<EOF
 ====stderr====
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /bin/ip link set up dev lo 2>/dev/null
+
 Configuring interface lo=lo (inet)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /bin/run-parts --exit-on-error --verbose /etc/network/if-up.d
+
 Configuring interface eth0=eth0 (inet)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /bin/ip addr add 1.2.3.4/255.255.255.0 broadcast 1.2.3.255     dev eth0 label eth0
 /bin/ip link set dev eth0   up
 
 /bin/run-parts --exit-on-error --verbose /etc/network/if-up.d
+
 Configuring interface eth1=eth1 (inet)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /bin/ip addr add 1.2.3.4/255.255.255.0 broadcast 1.2.3.255     dev eth1 label eth1
@@ -716,6 +748,7 @@ Configuring interface eth1=eth1 (inet6)
 /bin/ip -6 addr add 3ffe:ffff:120::fffe:1/64  dev eth1 
 
 /bin/run-parts --exit-on-error --verbose /etc/network/if-up.d
+
 Configuring interface eth2=eth2 (inet)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /bin/ip addr add 1.2.3.5/255.255.255.0 broadcast 1.2.3.255 	  dev eth2 label eth2
@@ -733,11 +766,56 @@ Configuring interface eth2=eth2 (inet6)
 /bin/ip -6 addr add 3ffe:ffff:120::fffe:1/64  dev eth2 
 
 /bin/run-parts --exit-on-error --verbose /etc/network/if-up.d
+
 Configuring interface eth3=eth3 (inet)
 /bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
 /bin/ip addr add 1.2.3.5/255.255.255.0 broadcast 1.2.3.255 	  dev eth3 label eth3
 /bin/ip link set dev eth3 mtu 1500 address 12:34:56:89:0a:bc up
 
+/bin/run-parts --exit-on-error --verbose /etc/network/if-up.d
+/bin/run-parts --exit-on-error --verbose /etc/network/if-up.d
+EOF
+cat >tests/testcase.17 <<EOF
+auto eth0 eth1 eth2
+
+iface eth0 inet manual
+    description foo
+
+iface eth1 inet manual
+    description foo bar with spaces
+
+iface eth2 inet manual
+    description works with ipv6 too
+EOF
+cat >tests/up.17 <<EOF
+====stdout====
+====stderr====
+/bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
+/bin/ip link set up dev lo 2>/dev/null
+
+Configuring interface lo=lo (inet)
+/bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
+/bin/run-parts --exit-on-error --verbose /etc/network/if-up.d
+/bin/ip link set eth0 alias "foo"
+Configuring interface eth0=eth0 (inet)
+/bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
+
+
+/bin/ip link set dev eth0 up 2>/dev/null || true
+/bin/run-parts --exit-on-error --verbose /etc/network/if-up.d
+/bin/ip link set eth1 alias "foo bar with spaces"
+Configuring interface eth1=eth1 (inet)
+/bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
+
+
+/bin/ip link set dev eth1 up 2>/dev/null || true
+/bin/run-parts --exit-on-error --verbose /etc/network/if-up.d
+/bin/ip link set eth2 alias "works with ipv6 too"
+Configuring interface eth2=eth2 (inet)
+/bin/run-parts --exit-on-error --verbose /etc/network/if-pre-up.d
+
+
+/bin/ip link set dev eth2 up 2>/dev/null || true
 /bin/run-parts --exit-on-error --verbose /etc/network/if-up.d
 /bin/run-parts --exit-on-error --verbose /etc/network/if-up.d
 EOF
@@ -763,7 +841,7 @@ for test in 1 2 3 4 5 6 7 8 9 10; do
         echo "=========="
 done
 
-for test in 11 12 13 14 15 16; do
+for test in 11 12 13 14 15 16 17; do
         args="-a"
         ./ifup -nv --force -i tests/testcase.$test $args \
                 >tests/up-res-out.$test 2>tests/up-res-err.$test || 
